# ws_python

./: README.md  pyproject.toml
a01/: desafio.py  ex00.py
a02/: ex01.py
aulas/00_inicio/: ex00.py
aulas/0_ambiente/: 00.py
