[tool.poetry]
name = "ws-python"
version = "0.1.0"
description = ""
authors = ["Diego Morais <dolivmorais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
